[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/movingPlatform.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 0, 0, 0, 448, 0, 0, 0, 0, 0, 688, 0 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.5, 8 )

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "move2"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="movingPlatform" type="Path2D"]
curve = SubResource( 4 )
script = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]

[node name="platform" parent="PathFollow2D" instance=ExtResource( 1 )]

[node name="AnimatedSprite" parent="PathFollow2D/platform" index="0"]
position = Vector2( 0, -10.5 )
animation = "moving"

[node name="CollisionShape2D" parent="PathFollow2D/platform" index="1"]
position = Vector2( 0, -13 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" parent="PathFollow2D/platform" index="2"]
position = Vector2( 0, -7 )
rect = Rect2( -27.5, -7, 55, 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "move"
anims/move = SubResource( 3 )
anims/move2 = SubResource( 5 )

[connection signal="body_entered" from="PathFollow2D/platform" to="." method="_on_platform_body_entered"]
[connection signal="screen_exited" from="PathFollow2D/platform/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="PathFollow2D/platform"]
